squash bugs

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ display: flex;
 }
 
 .navbar{
+    display: flex;
     width: 100%;
     position: fixed;
     transition: ease-in-out 0.3s;
@@ -21,25 +22,28 @@ display: flex;
     padding-bottom: 0.63rem;
 }
 
- .navbar-toggler span, .navbar-brand {color: rgb(255, 255, 255);}
+.navbar .container {
+    display: flex;
+    align-items: center;
+}
+
+ .navbar-toggler span, .navbar-brand {color: rgb(63, 59, 59);}
 
 .navbar-toggler {
     position: absolute;
     right: 1.25rem;
-    top: 0.625rem;
+    top:-0.375rem;
     outline: none;
     background-color: transparent;
     border: 0.0625rem solid transparent;
 }
-
 .navbar-toggler span {
    color:  #666;
    font-size: 1.25rem;
    cursor: pointer; 
    pointer-events: none;
 }
-
-.navbar-brand{
+.navbar-brand img{
     width: 9.68125rem;
     height: 2.88125rem;
 }
@@ -51,7 +55,8 @@ display: flex;
 
 .nav-list{
     display: flex;
-    align-items: center;   
+    margin-left: auto;
+    align-self: flex-end;
 }
 
 .nav-link a {
@@ -372,7 +377,7 @@ font-weight: 800;
 }
 
 .person img:nth-child(1){
-    grid-column: 6 / 10;
+    grid-column: 5 / 10;
     grid-row: 1 / 5;
     height: 28rem;
     width: 20rem;
@@ -380,9 +385,9 @@ font-weight: 800;
 }
 
 .person img:nth-child(2){
-   grid-column: 7 / 14;
-   grid-row: 1 / 4 ;
-   height: 22rem;
+   grid-column: 6 / 14;
+   grid-row: 1 / 5 ;
+   height: 23.124rem;
   
 }
 
@@ -774,7 +779,7 @@ footer{
     display:flex;
     gap: 1.25rem;
     align-items: flex-end; 
-    margin: 0 2.25rem 0 35rem;
+    margin: 0 2.25rem 0 auto;
 }
 
 .social-links a i{
@@ -834,7 +839,7 @@ footer{
             top: 50px;
             background-image: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.7)); 
             width: 100%;
-            text-align: right;
+            text-align: left;
             box-shadow: 0px 0px 20px rgba(52, 46, 75, 0.1);
         }
     [aria-expanded="true"] ~ ul li a {
@@ -879,7 +884,9 @@ footer{
         font-size: 1.15rem;
     }
 
-.hubspot{flex-wrap: wrap;}
+.hubspot{
+    flex-direction: column;
+    flex-wrap: wrap;}
 
 .person-quote{
     display: flex;
@@ -893,8 +900,9 @@ footer{
 
 .plan{width: 40rem;}
 .planprice{padding-left: 15rem;}
-.plan-features{width: auto;}
+.plan-features{margin-right: auto;}
 .top-plan-row, .bottom-plan-row{gap: 0;}
+.top-plan-left{padding: 0.75rem;}
 .plan-features{padding: 0.5rem;}
 .hire{flex-wrap: wrap;}
 .copyrights-cookies p {width: 100%}
@@ -911,7 +919,8 @@ footer{
 
 .line{width: 4rem;}
 .bull-line h3 {font-size: 2.6875rem;}
-.brands{gap: 6.25rem;}
+.white{display: none;}
+.brands{gap: 5.25rem;}
 .brands img{width: 4rem;}
 .social-links{margin: 0 2.25rem 0 5rem;}
 .policy-socials .privacy-links a  {font-size:0.85rem;}
@@ -926,6 +935,7 @@ footer{
     .left-part p{
         font-size: 0.95rem;
         text-align: center;
+        padding:0.25rem ;
     }
 
     .left-banner{width: 10rem;}
@@ -1001,6 +1011,11 @@ footer{
         padding: 0 0 5rem 0;
     }
 
+    .hub-quote{
+    padding: 0 2.25rem;
+    text-align: center;
+    }
+
     .person {
         flex: 1;
         display: grid;
@@ -1034,7 +1049,9 @@ footer{
    .plan-table{max-width: 100%;}
    .price-period{justify-content: center;}
    .planprice{padding: 0;}
-    .price-title p{padding: 0.5rem;}
+    .price-title p{
+        font-size: 1.95rem;
+        padding: 0.5rem;}
    .planprice p{
         color: #5F6368;
         font-size: 2rem;
@@ -1050,6 +1067,7 @@ footer{
      display: flex;
      flex-direction: column;
     }
+    
     .cancel{
         display: flex;
         font-size: 1.35rem;
@@ -1064,7 +1082,7 @@ footer{
     .features{padding: 0;}
     .form{
         max-width: 17rem;
-        margin: 1.125rem 0;
+        margin: 0 0 1.25rem 1.125rem;
     }
 
     .logo-contact{
